--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "axios": "^1.9.0",
     "bootstrap-icons": "^1.11.3",
     "formidable": "^3.5.4",
     "next": "15.2.4",
