--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^5.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-icons": "^5.5.0",
     "react-places-autocomplete": "^7.3.0",
     "resend": "^4.7.0"
